--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -62,9 +66,23 @@ button:focus-visible {
 
 #app {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  /*margin: 0 auto;*/
+  /*padding: 2rem;*/
   /*text-align: center;*/
+}
+
+code {
+  background-color: #f5f7fa;
+  border-radius: 4px;
+  padding: 0.15rem 0.5rem;
+  /*font-family: var(--code-font-family);*/
+  font-size: 14px;
+  color: #303133;
+  line-height: 1.4;
+}
+
+.example-showcase {
+  padding: 1.5rem;
 }
 
 @media (prefers-color-scheme: light) {
