--- a/src/components/byte-tooltip/src/style.less
+++ b/src/components/byte-tooltip/src/style.less
@@ -12,7 +12,12 @@
 
   &.is-light {
     background: #ffffff;
+    border: #d9d9d9 solid 1px;
     color: #1a1a1a;
+
+    .byte-tooltip-arrow::before {
+      border: #d9d9d9 solid 1px;
+    }
   }
 
   .byte-tooltip-arrow,
@@ -39,71 +44,43 @@
     transform: rotate(45deg);
   }
 
-  &[data-popper-placement^='top'] > .byte-tooltip-arrow {
-    bottom: -4px;
+  &[data-popper-placement^='top'] {
+    .byte-tooltip-arrow {
+      bottom: -4px;
+    }
+    .byte-tooltip-arrow::before {
+      border-left: transparent;
+      border-top: transparent;
+    }
   }
 
-  &[data-popper-placement='top'] > .byte-tooltip-arrow {
-    left: 50%;
-    transform: translate(-50%, 0);
+  &[data-popper-placement^='bottom'] {
+    .byte-tooltip-arrow {
+      top: -4px;
+    }
+    .byte-tooltip-arrow::before {
+      border-right: transparent;
+      border-bottom: transparent;
+    }
   }
 
-  &[data-popper-placement='top-start'] > .byte-tooltip-arrow {
-    left: 10%;
+  &[data-popper-placement^='left'] {
+    .byte-tooltip-arrow {
+      right: -4px;
+    }
+    .byte-tooltip-arrow::before {
+      border-left: transparent;
+      border-bottom: transparent;
+    }
   }
 
-  &[data-popper-placement='top-end'] > .byte-tooltip-arrow {
-    right: 10%;
-  }
-
-  &[data-popper-placement^='bottom'] > .byte-tooltip-arrow {
-    top: -4px;
-  }
-
-  &[data-popper-placement='bottom'] > .byte-tooltip-arrow {
-    left: 50%;
-    transform: translate(-50%, 0);
-  }
-
-  &[data-popper-placement='bottom-start'] > .byte-tooltip-arrow {
-    left: 10%;
-  }
-
-  &[data-popper-placement='bottom-end'] > .byte-tooltip-arrow {
-    right: 10%;
-  }
-
-  &[data-popper-placement^='left'] > .byte-tooltip-arrow {
-    right: -4px;
-  }
-
-  &[data-popper-placement='left'] > .byte-tooltip-arrow {
-    bottom: 50%;
-    transform: translate(0, 50%);
-  }
-
-  &[data-popper-placement='left-start'] > .byte-tooltip-arrow {
-    top: 10%;
-  }
-
-  &[data-popper-placement='left-end'] > .byte-tooltip-arrow {
-    bottom: 10%;
-  }
-
-  &[data-popper-placement^='right'] > .byte-tooltip-arrow {
-    left: -4px;
-  }
-
-  &[data-popper-placement='right'] > .byte-tooltip-arrow {
-    bottom: 50%;
-    transform: translate(0, 50%);
-  }
-
-  &[data-popper-placement='right-start'] > .byte-tooltip-arrow {
-    top: 10%;
-  }
-
-  &[data-popper-placement='right-end'] > .byte-tooltip-arrow {
-    bottom: 10%;
+  &[data-popper-placement^='right'] {
+    .byte-tooltip-arrow {
+      left: -4px;
+    }
+    .byte-tooltip-arrow::before {
+      border-right: transparent;
+      border-top: transparent;
+    }
   }
 }
