--- a/src/components/byte-button/src/style.less
+++ b/src/components/byte-button/src/style.less
@@ -1,5 +1,3 @@
-
-
 .byte-button {
   display: inline-flex;
   justify-content: center;
@@ -13,7 +11,7 @@
   box-sizing: border-box;
   outline: none;
   transition: .1s;
-  font-weight: 500;
+  //font-weight: 500;
   user-select: none;
   vertical-align: middle;
   -webkit-appearance: none;
@@ -22,6 +20,32 @@
   padding: 8px 15px;
   font-size: 14px;
   border-radius: 4px;
+  --byte-border-radius-base: 4px;
+
+  &.byte-button-large {
+    --byte-button-size: 40px;
+    --byte-font-size-base: 14px;
+    height: var(--byte-button-size);
+    padding: 12px 19px;
+    font-size: var(--byte-font-size-base);
+    border-radius: var(--byte-border-radius-base);
+
+    &.is-circle {
+      padding: 12px;
+    }
+  }
+  
+  &.byte-button-small {
+    --byte-button-size: 24px;
+    height: var(--byte-button-size);
+    padding: 5px 11px;
+    font-size: 12px;
+    border-radius: calc(var(--byte-border-radius-base) - 1px);
+
+    &.is-circle {
+      padding: 5px;
+    }
+  }
 
   &.is-round {
     border-radius: 20px;
@@ -32,12 +56,50 @@
     padding: 8px;
   }
 
+  &.is-link {
+    border-color: transparent;
+    color: #606266;
+    background: transparent;
+    padding: 2px;
+    height: auto;
+
+    &:hover {
+      color: #a8abb2;
+    }
+  }
+
+  & [class*=byte-icon]+span {
+    margin-left: 6px;
+  }
+
+  & > span {
+    display: inline-flex;
+    align-items: center;
+  }
+
+  @keyframes rotating {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+  .byte-icon.is-loading {
+    animation: rotating 2s linear infinite;
+  }
+
   &.is-disabled, &.is-disabled:hover, &.is-disabled:focus {
     color: #a8abb2;
     cursor: not-allowed;
     background-image: none;
     background-color: #ffffff;
     border-color: #e4e7ed;
+
+    &.is-link {
+      background-color: transparent;
+      border-color: transparent;
+    }
   }
 
   &.byte-button-primary {
@@ -65,6 +127,29 @@
         background-color: #ecf5ff;
         border-color: #d9ecff;
       }
+    }
+
+    &.is-link {
+      border-color: transparent;
+      color: #409eff;
+      background: transparent;
+      padding: 2px;
+      height: auto;
+
+      &:hover {
+        color: #a0cfff;
+      }
+
+      &.is-disabled {
+        color: #a0cfff;
+        border-color: transparent;
+        background: transparent;
+      }
+    }
+
+    &.is-loading {
+      .is-disabled();
+      cursor: auto;
     }
 
   }
@@ -95,6 +180,29 @@
         border-color: #e1f3d8;
       }
     }
+
+    &.is-link {
+      border-color: transparent;
+      color: #67C23A;
+      background: transparent;
+      padding: 2px;
+      height: auto;
+
+      &:hover {
+        color: #b3e19d;
+      }
+
+      &.is-disabled {
+        color: #b3e19d;
+        border-color: transparent;
+        background: transparent;
+      }
+    }
+
+    &.is-loading {
+      .is-disabled();
+      cursor: auto;
+    }
   }
 
   &.byte-button-info {
@@ -122,6 +230,29 @@
         background-color: #f4f4f5;
         border-color: #e9e9eb;
       }
+    }
+
+    &.is-link {
+      border-color: transparent;
+      color: #909399;
+      background: transparent;
+      padding: 2px;
+      height: auto;
+
+      &:hover {
+        color: #c8c9cc;
+      }
+
+      &.is-disabled {
+        color: #c8c9cc;
+        border-color: transparent;
+        background: transparent;
+      }
+    }
+
+    &.is-loading {
+      .is-disabled();
+      cursor: auto;
     }
   }
 
@@ -151,6 +282,28 @@
         border-color: #faecd8;
       }
     }
+    &.is-link {
+      border-color: transparent;
+      color: #e6a23c;
+      background: transparent;
+      padding: 2px;
+      height: auto;
+
+      &:hover {
+        color: #f3d19e;
+      }
+
+      &.is-disabled {
+        color: #f3d19e;
+        border-color: transparent;
+        background: transparent;
+      }
+    }
+
+    &.is-loading {
+      .is-disabled();
+      cursor: auto;
+    }
   }
 
   &.byte-button-danger {
@@ -178,6 +331,29 @@
         background-color: #fef0f0;
         border-color: #fde2e2;
       }
+    }
+
+    &.is-link {
+      border-color: transparent;
+      color: #f56c6c;
+      background: transparent;
+      padding: 2px;
+      height: auto;
+
+      &:hover {
+        color: #fab6b6;
+      }
+
+      &.is-disabled {
+        color: #fab6b6;
+        border-color: transparent;
+        background: transparent;
+      }
+    }
+
+    &.is-loading {
+      .is-disabled();
+      cursor: auto;
     }
   }
 }
