--- a/src/style.css
+++ b/src/style.css
@@ -28,14 +28,14 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+/* body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
   background: gold;
-}
+} */
 
 h1 {
   font-size: 3.2em;
@@ -66,10 +66,10 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
-  /*margin: 0 auto;*/
-  /*padding: 2rem;*/
-  /*text-align: center;*/
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
 }
 
 code {
