--- a/src/style.css
+++ b/src/style.css
@@ -66,9 +66,9 @@ button:focus-visible {
 
 #app {
   max-width: 1280px;
-  /*margin: 0 auto;*/
-  /*padding: 2rem;*/
-  /*text-align: center;*/
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
 }
 
 code {
