--- a/src/components/byte-table/src/style.less
+++ b/src/components/byte-table/src/style.less
@@ -3,6 +3,10 @@ table {
     border-collapse: collapse;
 }
 
+.hh_test {
+    background-color: red;
+}
+
 .byte-table {
     font-size: 14px;
     color: #606266;
@@ -27,6 +31,10 @@ table {
 
     .stripe {
         background-color: #fafafa;
+    }
+
+    .hh {
+        background-color: red;
     }
 
     .border {
