--- a/src/components/byte-table/src/style.less
+++ b/src/components/byte-table/src/style.less
@@ -7,6 +7,28 @@ table {
     background-color: red;
 }
 
+.height_test {
+    display: flex;
+    flex-direction: column;
+    height: 250px;
+    overflow: auto;
+    scrollbar-width: none;
+    scrollbar-color: #dddee0;
+
+    thead {
+        height: auto;
+
+        tr {
+            display: inline-block;
+            width: 100%;
+        }
+    }
+
+    tbody {
+        flex: 1;
+    }
+}
+
 .byte-table {
     font-size: 14px;
     color: #606266;
