--- a/src/components/byte-table/src/table-header/style.less
+++ b/src/components/byte-table/src/table-header/style.less
@@ -1,4 +1,9 @@
 .byte-table-thead {
     color: #909399;
     font-size: 500;
+
+    // th {
+    //     position: sticky;
+    //     top: -1px;
+    // }
 }
